# rains

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: cli.rs  lib.rs  main.rs  sina.rs
src/invest/: mod.rs  quote.rs  stock.rs
