[package]
authors = ["Y <j4fdot@qq.com>"]
edition = "2021"
license = "MIT"
name = "rains"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "3.0", features = ["derive"] }
owo-colors = "3"
regex = "1.5"
reqwest = "0.11"
scraper = "0.12"
tokio = { version = "1.15", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
